<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityNewSeason">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <EditText
            android:id="@+id/et_nombreCampania"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/et_layoutmargin"
            android:background="@drawable/et_lightgreen"
            android:drawablePadding="@dimen/et_drawablepadding"
            android:ems="10"
            android:hint="@string/nameSeason"
            android:inputType="textPersonName"
            android:padding="@dimen/et_padding" />

        <EditText
            android:id="@+id/et_precioHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/et_layoutmargin"
            android:background="@drawable/et_lightgreen"
            android:drawablePadding="@dimen/et_drawablepadding"
            android:ems="10"
            android:hint="@string/hourprice"
            android:inputType="numberDecimal"
            android:padding="@dimen/et_padding" />

        <EditText
            android:id="@+id/et_fechaInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/et_layoutmargin"
            android:background="@drawable/et_lightgreen"
            android:drawablePadding="@dimen/et_drawablepadding"
            android:ems="10"
            android:hint="@string/startdate"
            android:inputType="textPersonName"
            android:padding="@dimen/et_padding" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <Button
            android:id="@+id/btn_crearCampania"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnG_layoutmargin"
            android:background="@drawable/btn_green"
            android:padding="@dimen/btnG_padding"
            android:text="@string/createseason" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>