<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityNewWorker">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/et_NombreTrabajador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/et_layoutmargin"
            android:background="@drawable/et_lightgreen"
            android:drawablePadding="@dimen/et_drawablepadding"
            android:ems="10"
            android:hint="@string/nameWorker"
            android:inputType="textPersonName"
            android:padding="@dimen/et_padding" />

        <EditText
            android:id="@+id/et_ApellidoTrabajador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/et_layoutmargin"
            android:background="@drawable/et_lightgreen"
            android:drawablePadding="@dimen/et_drawablepadding"
            android:ems="10"
            android:hint="@string/surnameWorker"
            android:inputType="textPersonName"
            android:padding="@dimen/et_padding" />

        <EditText
            android:id="@+id/et_DniTrabajador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/et_layoutmargin"
            android:background="@drawable/et_lightgreen"
            android:drawablePadding="@dimen/et_drawablepadding"
            android:ems="10"
            android:hint="@string/nifnie"
            android:inputType="textPersonName"
            android:padding="@dimen/et_padding" />

        <EditText
            android:id="@+id/et_TlfTrabajador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/et_layoutmargin"
            android:background="@drawable/et_lightgreen"
            android:drawablePadding="@dimen/et_drawablepadding"
            android:ems="10"
            android:hint="Telefono"
            android:inputType="number"
            android:padding="@dimen/et_padding" />

        <EditText
            android:id="@+id/et_SegSocTrabajador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/et_layoutmargin"
            android:background="@drawable/et_lightgreen"
            android:drawablePadding="@dimen/et_drawablepadding"
            android:ems="10"
            android:hint="Nº Seguridad social"
            android:inputType="number"
            android:padding="@dimen/et_padding" />

        <EditText
            android:id="@+id/et_CueBancTrabajador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/et_layoutmargin"
            android:background="@drawable/et_lightgreen"
            android:drawablePadding="@dimen/et_drawablepadding"
            android:ems="10"
            android:hint="Cuenta bancaria"
            android:inputType="textPersonName"
            android:padding="@dimen/et_padding" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btn_CrearTrabajador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnG_layoutmargin"
            android:background="@drawable/btn_green"
            android:padding="@dimen/btnG_padding"
            android:text="@string/createNewWorker" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>