<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMenu">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="90dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <ImageButton
                    android:id="@+id/ib_seasons"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/btn_green"
                    app:srcCompat="@drawable/ic_campaign" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seasons"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <ImageButton
                    android:id="@+id/ib_workers"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/btn_green"
                    app:srcCompat="@drawable/ic_workers" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/workers"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <ImageButton
                    android:id="@+id/ib_workday"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/btn_green"
                    app:srcCompat="@drawable/ic_flechajornadagrande" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/workday"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <ImageButton
                    android:id="@+id/ib_signout"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/btn_green"
                    app:srcCompat="@drawable/ic_signout" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signout"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Usuario: "
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Campaña: "
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Fecha: "
                    android:textColor="#000000"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_Usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="usuario"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txt_Campania"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Escoge una campaña"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txt_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="fecha"
                    android:textColor="#000000"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>